<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/nav_home" android:title="@string/label_16" android:icon="@drawable/ic_home" />
  <item android:id="@+id/nav_explore" android:title="@string/label_13" android:icon="@drawable/ic_search" />
  <item android:id="@+id/nav_favorites" android:title="@string/label_14" android:icon="@drawable/ic_heart" />
  <item android:id="@+id/nav_history" android:title="@string/label_17" android:icon="@drawable/ic_history" />
  <item android:id="@+id/nav_profile" android:title="@string/label_15" android:icon="@drawable/ic_user" />
  <item android:id="@+id/nav_admin" android:title="@string/label_18" android:icon="@drawable/ic_shield" />
  <item android:id="@+id/nav_auth" android:title="@string/label_19" android:icon="@drawable/ic_logout" />
</menu>